--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
-        node-version: [14.x, 16.x, 18.x]
+        os: [ ubuntu-latest]
+        node-version: [18.x]
 
     steps:
     - uses: actions/checkout@v2
